--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,72 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0; 
+  border-bottom: 1px solid black;
+  box-sizing: border-box; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav .logo {
+  font-family: "Pixelify Sans";
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 20px; 
+}
+
+.nav-links {
+  list-style: none; 
+  display: flex; 
+  gap: 20px; 
+  margin: 0; 
+  padding: 0 20px 0 0; 
+  font-family: "Varela";
+  position: relative;
+}
+
+.nav-links a {
+  position: relative;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -2px; 
+  left: 0;
+  background-color: black;
+  transform-origin: center;
+  transition: transform 0.25s ease-out;
+}
+
+.nav-links a:hover::after {
+  transform: scaleX(1);
+  transform-origin: center;
+}
+
+
+.nav-links li {
+  display: inline;
+}
+
+.nav-links a {
+  text-decoration: none; 
+  font-size: 18px;
+}
+
+.nav-links {
+  margin-left: auto; 
+}
+
+.nav-links a:visited {
+  color: black; 
 }
