--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,14 @@
 body {
   margin: 0;
-
+  padding: 0;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -9,13 +16,20 @@ nav {
   padding: 15px 0; 
   border-bottom: 1px solid black;
   box-sizing: border-box; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 1000;
 }
 
 nav .logo {
-  font-family: "Pixelify Sans";
+  font-family: "Pixelify Sans", sans-serif;
   font-size: 24px;
   font-weight: bold;
   padding-left: 20px; 
+  margin: 0;
 }
 
 .nav-links {
@@ -24,11 +38,14 @@ nav .logo {
   gap: 20px; 
   margin: 0; 
   padding: 0 20px 0 0; 
-  font-family: "Varela";
-  position: relative;
+  font-family: "Pixelify Sans", sans-serif;
 }
 
-.nav-links a {
+.nav-links li {
+  display: inline;
+}
+
+.nav-links a, .logo-link {
   position: relative;
   text-decoration: none;
   color: black;
@@ -53,20 +70,18 @@ nav .logo {
   transform-origin: center;
 }
 
-
-.nav-links li {
-  display: inline;
+.nav-links a:visited, .logo-link:visited {
+  color: black;
+  text-decoration: none;
 }
 
-.nav-links a {
-  text-decoration: none; 
-  font-size: 18px;
+.logo-link:visited {
+  color: black;
+  text-decoration: none;
 }
 
-.nav-links {
-  margin-left: auto; 
-}
-
-.nav-links a:visited {
-  color: black; 
+.content {
+  margin-top: 60px; /* Adjust this value to match the height of your navbar */
+  flex-grow: 1;
+  padding: 20px;
 }
