--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,87 +1,91 @@
 body {
     margin: 0;
     padding: 0;
-  }
-  
-  .App {
+}
+
+.App {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-  }
-  
-  nav {
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10px; 
+    padding: 30px 10px;
     border-bottom: 1px solid black;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: white;
     z-index: 1000;
-  }
-  
-  nav .logo {
+}
+
+nav .logo {
     font-family: "Pixelify Sans", sans-serif;
     font-size: 24px;
     font-weight: bold;
-    padding-left: 20px; 
+    padding-left: 20px;
     margin: 0;
-  }
-  
-  .nav-links {
-    list-style: none; 
-    display: flex; 
-    gap: 20px; 
-    margin: 0; 
-    padding: 0 20px 0 0; 
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0 20px 0 0;
     font-family: "Pixelify Sans", sans-serif;
-  }
-  
-  .nav-links li {
+}
+
+.nav-links li {
     display: inline;
-  }
-  
-  .nav-links a, .logo-link {
+}
+
+.nav-links a,
+.logo-link {
     position: relative;
     text-decoration: none;
     color: black;
     font-size: 18px;
-  }
-  
-  .nav-links a::after {
+}
+
+.nav-links a::after {
     content: '';
     position: absolute;
     width: 100%;
     transform: scaleX(0);
     height: 2px;
-    bottom: -2px; 
+    bottom: -2px;
     left: 0;
     background-color: black;
     transform-origin: center;
     transition: transform 0.25s ease-out;
-  }
-  
-  .nav-links a:hover::after {
+}
+
+.nav-links a:hover::after {
     transform: scaleX(1);
     transform-origin: center;
-  }
-  
-  .nav-links a:visited, .logo-link:visited {
+}
+
+.nav-links a:visited,
+.logo-link:visited {
     color: black;
     text-decoration: none;
-  }
-  
-  .logo-link:visited {
+}
+
+.logo-link:visited {
     color: black;
     text-decoration: none;
-  }
-  
-  .content {
-    margin-top: 60px; /* Adjust this value to match the height of your navbar */
+}
+
+.content {
+    margin-top: 80px; /* Adjust this value to match the height of your navbar */
     flex-grow: 1;
-    padding: 20px;
-  }
+    max-width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    box-sizing: border-box; /* Include padding in the width calculation */
+}
